# qcns

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py
cpp/components/: channels.h  errors.h  host.h  linalg.h  qubit.h
cpp/components/qcns_cpp/: CMakeLists.txt
cpp/components/qcns_cpp/include/qcns_cpp/linalg/: cache.h  matrices.h  matrix_utils.h  operator_utils.h
cpp/components/qcns_cpp/include/qcns_cpp/qubits/: QSystem.h  Qubit.h
cpp/components/qcns_cpp/src/: main.cpp
cpp/components/qcns_cpp/src/linalg/: matrices.cpp  matrix_utils.cpp  operator_utils.cpp
cpp/components/qcns_cpp/src/qubits/: QSystem.cpp  Qubit.cpp
cpp/examples/: teleportation.cpp
dev/: qubit_debug.cpp  qubit_debug.py  test.cpp
python/: __init__.py
python/components/: __init__.py  channel.py  connection.py  error.py  event.py  host.py  memory.py  packet.py  photon_detector.py  photon_source.py  protocol.py  qprogram.py  qubit.py  simulation.py  utils.py
python/components/connection/: __init__.py  channel.py  connection.py
python/components/hardware/: __init__.py  connection.py  device.py  memory.py  photon_detector.py  photon_source.py
python/components/network/: __init__.py  client.py  controller.py  host.py  node.py  qprogram.py  router.py  server.py  utils.py
python/components/packet/: __init__.py  packet.py  protocol.py
python/components/qubit/: __init__.py  error.py  qubit.py  utils.py
python/components/simulation/: __init__.py  (+2 more)
python/examples/: entanglement_generation.py  entanglement_swapping.py  network_simulation.py  rg_dqc.py  teleportation.py  tp_dqc.py
(+5 files in other folders)
